* New plugin - :ui:vixyz.
  Plugin allows to navigate through filesystem using vi-like keybindings.
  To enable the plugin add the following to your ~/.xyzcmd/conf/keys.xyz:
  load(":ui:vixyz"), or type it at the management console prompt in runtime.
* New method :sys:cmd:get_attr_f
  Method returns current attibute function.
* New method :sys:cmd:set_attr_f
  Method sets attibute function.

Configuration
-------------
* New DSL method - unload().
  Unload plugin.

I18N
----
* Added new Ukrainian translation (thanks to Vlad V. Teterya <vlad@vlad.uz.ua>)

Version 0.0.5

=============

Overview
--------
* Nested VFS support
* Heavy LocalVFS walker optimization: 30 to 40 times faster
  to enter a directory, and a lot less memory intensive as well
* New Russian translation
* XYZCommander manpage
* Development has moved to github (http://github.com/syhpoon/xyzcmd)

VFS
---
* VFS subsystem now supports arbitrary nested VFS objects.
* Local VFS objects walking optimization. Simple lazy instantiation allows
  30 to 40 times faster to enter the directory.

Plugins
-------
* New method :sys:panel:get_all()
  Method returns list of all VFSObject instances in panel.

* New method :sys:panel:tag_diff()
  Tag all the objects in active panel which are missing from the inactive one.
  Bound to Ctrl-x d.

* Version 0.2 of plugin :ui:testinput.
  Added support for prefix keys and also allow plugin to show current
  binding of pressed key.

Configuration
-------------
* New icmd - exit.
* New FSRules type{} arguments:
  * file_or_link2: Matches file objects or links to ones.
  * dir_or_link2: Matches directory objects or links to ones.
  * socket_or_link2: Matches socket objects or links to ones.
  * fifo_or_link2: Matches fifo objects or links to ones.
  * char_or_link2: Matches character device or links to ones.
  * block_or_link2: Matches block device or links to ones.
* New command line flag -l showing list of available skins.

I18N
----
* Added infrastructure for i18n.